# tidu-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  coverage-thresholds.json
.claude/commands/: check-agent-assets.md  createpr.md  sync-agent-assets.md
.github/workflows/: ci.yml  docs.yml
ai/: agentic-bug-sweep.md  agentic-bug-sweep.schema.json  common-agent-rules.md  manifest.json  numerical-rust-rules.md  pr-workflow-rules.md  repo-settings.json  run-claude-solve-bug.sh  run-codex-solve-bug.sh  solve_bug_issue.md
ai/new-tensor4all-rust-repo/: SKILL.md
crates/example/: Cargo.toml
crates/tidu/: Cargo.toml
crates/tidu/src/: checkpoint.rs  expert.rs  function.rs  graph_task.rs  lib.rs  linearized.rs  reverse_graph.rs  value.rs
crates/tidu/src/engine/: context.rs  execution.rs  forward.rs  mod.rs  node.rs  replay.rs  results.rs  rule.rs  tape.rs  tracked.rs
crates/tidu/tests/: chainrules_tests.rs  checkpoint_hvp_tests.rs  checkpoint_policy_tests.rs  checkpoint_pullback_tests.rs  function_api_tests.rs  linearize_api_tests.rs  op_api_tests.rs  organization.rs  public_rustdoc_examples.rs  pullback_with_seed_tests.rs  thread_safety.rs  value_api_tests.rs
docs/: _quarto.yml  index.md
docs/api/: index.md
docs/architecture/: computegraph-integration.md  computegraph-integration.qmd  index.md  overview.md  overview.qmd  public-boundaries.md
docs/design/: eager-api-boundary.md  jax-terminology-docs.md
docs/getting-started/: index.md  terminology.md
docs/guides/: complex-ad.md  eager-integration.md  eager-integration.qmd  higher-order-ad.md  implementing-primitives.md  implementing-primitives.qmd  linearize-and-transpose.md
examples/: eager_reverse_mode.rs  gradient_two_inputs.rs  primitive_linearization.rs
scripts/: agentic-bug-sweep.sh  build_docs_site.sh  check-agent-assets.sh  check-coverage.py  check-docs-site.py  check-repo-settings.sh  configure-repo-settings.sh  create-pr.sh  monitor-pr-checks.sh  sync-agent-assets.sh
src/: backward.rs  differentiate.rs  eager_record.rs  eager_transpose.rs  emit.rs  grad_node.rs  lib.rs  linear_fragment.rs  linear_transpose.rs  linearize.rs  linearized_graph.rs  primitive_graph.rs  transpose.rs
tests/: adcontext_tests.rs  checkpoint_alias_tests.rs  complex_ad_tests.rs  eager_backward_tests.rs  eager_record_tests.rs  edge_case_tests.rs  fallible_ad_tests.rs  robustness_tests.rs  rules_public_api_tests.rs  scalar_ad_tests.rs  test_agent_asset_permissions.py  test_agentic_bug_sweep.py  test_create_pr_script.py  test_monitor_pr_checks.py  test_new_repo_script.py  test_repo_settings_scripts.py  test_solve_bug_entrypoints.py  vector_ad_tests.rs
(+39 files in other folders)
