[package]
name = "tidu"
version = "0.1.0"
edition = "2021"
authors = ["Hiroshi Shinaoka <h.shinaoka@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Automatic-differentiation transforms (linearize, transpose, eager reverse-mode) for primitive computation graphs."
repository = "https://github.com/tensor4all/tidu-rs"
readme = "README.md"
keywords = ["autodiff", "gradient", "jvp", "vjp", "computation-graph"]
categories = ["mathematics", "science"]

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
computegraph = { version = "0.1.0", git = "https://github.com/tensor4all/computegraph-rs.git", rev = "691def2d82fd4367b397d61209449f68e82050b7" }

[dev-dependencies]
ndarray = "0.16"
num-complex = "0.4"
