[package]
name = "tidu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Linearize-first automatic-differentiation engine built on chainrules-core."

[dependencies]
chainrules-core.workspace = true
chainrules.workspace = true
